--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type":              "symfony-bundle",
     "description":       "",
     "keywords":          [
-        "getrdv"
+        "limesurvey", "symfony-bundle", "youmesoft", "gatman", "api"
     ],
     "homepage":          "https://bitbucket.org/youmesoft/limesurvey-api-symfonybundle",
     "license":           "MIT",
@@ -34,7 +34,7 @@
     },
     "extra":             {
         "branch-alias": {
-            "dev-master": "0.1-dev"
+            "dev-master": "1.x-dev"
         }
     }
 }
